// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtInputNumber Snap render AtInputNumber -- props class 1`] = `
<view
  class="test at-input-number test"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props disabled 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn at-input-number--disabled"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    disabled=""
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn at-input-number--disabled"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props disabledInput 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    disabled=""
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props size 1`] = `
<view
  class="at-input-number at-input-number--lg"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props step 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props style 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props type(digit) 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="digit"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props type(number) 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props value 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render AtInputNumber -- props width 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 4.2667rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;

exports[`AtInputNumber Snap render initial AtInputNumber 1`] = `
<view
  class="at-input-number"
>
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </view>
  <input
    class="at-input-number__input"
    style="width: 2.56rem;"
    type="number"
  />
  <view
    class="at-input-number__btn"
  >
    <text
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </view>
</view>
`;
